gateway/manifest/gateway-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-dep
  labels:
    app: gateway-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: RollingUpdate 
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: wasay786/gateway
